[package]
name = "ucdf"
version = "0.1.0"
edition = "2021"
description = "Unified Compact Data Format (UCDF) implementation in Rust"
authors = ["UCDF Team"]
license = "MIT"
readme = "README.md"

[dependencies]
thiserror = "1.0"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true }
bon = "3.6.3"
nom = "7.1.3"

[features]
default = ["with-serde", "with-chrono"]
with-serde = ["serde"]
with-chrono = ["chrono"]

[lib]
name = "ucdf"
path = "src/lib.rs"